Added Module#6: Jenkins Fixed SonarQube warnings Created pipeline