@@ -12,7 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.stream.StreamSupport;
 
-import static java.util.stream.Collectors.toList;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
@@ -54,7 +53,7 @@ public class TagAssembler implements
         return CollectionModel.of(StreamSupport
                         .stream(entities.spliterator(), false)
                         .map(this::toModel)
-                        .collect(toList()),
+                        .toList(),
                 linkTo(methodOn(TagController.class)
                         .getAll(PageRequest.of(
                                 0, 25,
